# evals-for-every-language

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.eval  LICENSE  README.md  app.py  bibliography.bib  cloudbuild.yaml  datasets.json  deploy_eval.sh  evals.py  index.html  languages.json  languages_focused.json  models.json  models_focused.json  observablehq.config.js  package-lock.json  pyproject.toml  requirements.txt  requirements_dev.txt  results.json  results_focused.json  system_architecture_diagram.md  upload.py
.github/workflows/: huggingface-upload.yml  nightly-evals.yml
data/: INFO  ScriptCodes.csv  data.txt  datasets.json
data/arc/: ar_test.json  ar_train.json  bn_test.json  bn_train.json  de_test.json  de_train.json  es_test.json  es_train.json  fa_test.json  fa_train.json  fr_test.json  fr_train.json  hi_test.json  hi_train.json  id_test.json  id_train.json  ja_test.json  ja_train.json  jv_test.json  jv_train.json  mr_test.json  mr_train.json  pa_test.json  pa_train.json  pt_test.json  pt_train.json  ru_test.json  ru_train.json  ta_test.json  ta_train.json  te_test.json  te_train.json  tr_test.json  tr_train.json  ur_test.json  ur_train.json  vi_test.json  vi_train.json  zh_test.json  zh_train.json
data/glottolog_languoid.csv/: README.txt
evals/: README.md  app.py  backend.py  countries.py  download_data.py  languages.py  main.py  main_focused.py  main_gcs.py  models.py  plots.py  tables.py  tasks.py  translate.py
evals/datasets_/: __init__.py  arc.py  commonvoice.py  fleurs.py  flores.py  mgsm.py  mmlu.py  truthfulqa.py  util.py
frontend/: package-lock.json  package.json  upload.py
frontend/public/: INFO  LICENSE  README.md  index.html  manifest.json  results.json  sw.js  world.geo.json
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: AutoComplete.js  CostPlot.js  DatasetTable.js  Footer.js  Header.js  HistoryPlot.js  LanguagePlot.js  LanguageTable.js  LanguageTierHistoryPlot.js  LicenseHistoryPlot.js  Medal.js  ModelTable.js  ScoreColumns.js  ScoreField.js  SpeakerPlot.js  WorldMap.js
notes/: biases.md  maps.md  prompt-examples.md  system-architecture-diagram.md
results/: README.md  languages.json  model_health.json  models.json  results_detailed.json
src/: chart.md  compare-ais.md  compare-languages.md  index.md  list.md  methodology.md
src/components/: language-chart.js
src/data/: data.txt  languagebench.json  languagebench.json.py
