[project]
name = "languagebench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "pandas>=2.2.3",
    "numpy>=2.1.2",
    "joblib>=1.4.2",
    "language-data>=1.3.0",
    "tqdm>=4.66.6",
]

[tool.uv]
dev-dependencies = [
    "aiolimiter>=1.1.0",
    "bert-score>=0.3.13",
    "elevenlabs>=1.53.0",
    "evaluate==0.4.0",
    "huggingface-hub>=0.29.1",
    "jiwer>=3.1.0",
    "joblib>=1.4.2",
    "langcodes>=3.5.0",
    "language-data>=1.3.0",
    "openai>=1.52.2",
    "protobuf>=5.28.3",
    "python-dotenv>=1.0.1",
    "rich>=14.0.0",
    "sacrebleu>=2.4.3",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.8.0",
    "tqdm>=4.66.6",
    "transformers>=4.46.1",
]
