[project]
name = "ai-language-monitor"
version = "0.1.0"
description = "AI Language Evaluation Monitor"
authors = [
    {name = "Jonas Nothnagel", email = "jonas.nothnagel@gmail.com"},
]
dependencies = [
    "aiolimiter",
    "evaluate",
    "sentencepiece",
    "langcodes",
    "pandas",
    "datasets",
    "rich",
    "tqdm",
    "fastapi",
    "uvicorn",
    "google-cloud-storage",
    "python-dotenv",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals"]
